--- a/train-workflow.yaml
+++ b/train-workflow.yaml
@@ -33,6 +33,10 @@ components:
           artifactType:
             schemaTitle: system.Dataset
             schemaVersion: 0.0.1
+        neg_interaction_df_output:
+          artifactType:
+            schemaTitle: system.Dataset
+            schemaVersion: 0.0.1
         user_df_output:
           artifactType:
             schemaTitle: system.Dataset
@@ -46,6 +50,10 @@ components:
             schemaTitle: system.Dataset
             schemaVersion: 0.0.1
         item_df_input:
+          artifactType:
+            schemaTitle: system.Dataset
+            schemaVersion: 0.0.1
+        neg_interaction_df_input:
           artifactType:
             schemaTitle: system.Dataset
             schemaVersion: 0.0.1
@@ -97,10 +105,12 @@ deploymentSpec:
           \    from models.data_util import data_preproccess\n    from models.user_tower\
           \ import UserTower\n    from models.item_tower import ItemTower\n    import\
           \ pandas as pd\n    import numpy as np\n    from datetime import datetime\n\
-          \    import torch\n\n    store = FeatureStore()\n\n    item_encoder = ItemTower()\n\
-          \    user_encoder = UserTower()\n    item_encoder.load_state_dict(torch.load(item_input_model.path))\n\
-          \    user_encoder.load_state_dict(torch.load(user_input_model.path))\n \
-          \   item_encoder.eval()\n    user_encoder.eval()\n    # load item and user\
+          \    import torch\n    import os\n    print('WOWOWWO')\n    print(os.listdir('.'))\n\
+          \    print(os.listdir('feature_repo/'))\n    store = FeatureStore(repo_path=\"\
+          feature_repo/\")\n\n    item_encoder = ItemTower()\n    user_encoder = UserTower()\n\
+          \    item_encoder.load_state_dict(torch.load(item_input_model.path))\n \
+          \   user_encoder.load_state_dict(torch.load(user_input_model.path))\n  \
+          \  item_encoder.eval()\n    user_encoder.eval()\n    # load item and user\
           \ dataframes\n    item_df = pd.read_parquet(item_df_input.path)\n    user_df\
           \ = pd.read_parquet(user_df_input.path)\n\n    # Create a new table to be\
           \ push to the online store\n    item_embed_df = item_df[['item_id']].copy()\n\
@@ -123,7 +133,7 @@ deploymentSpec:
           \    user_items_df['event_timestamp'] = datetime.now()\n    user_items_df['top_k_item_ids']\
           \ = item_recommendation\n\n    store.push('user_items_push_source', user_items_df,\
           \ to=PushMode.ONLINE)\n\n"
-        image: quay.io/ecosystem-appeng/rec-sys-app
+        image: quay.io/ecosystem-appeng/rec-sys-app:latest
     exec-load-data-from-feast:
       container:
         args:
@@ -137,8 +147,9 @@ deploymentSpec:
         - "\nif ! [ -x \"$(command -v pip)\" ]; then\n    python3 -m ensurepip ||\
           \ python3 -m ensurepip --user || apt-get install python3-pip\nfi\n\nPIP_DISABLE_PIP_VERSION_CHECK=1\
           \ python3 -m pip install --quiet --no-warn-script-location 'kfp==2.11.0'\
-          \ '--no-deps' 'typing-extensions>=3.7.4,<5; python_version<\"3.9\"' && \"\
-          $0\" \"$@\"\n"
+          \ '--no-deps' 'typing-extensions>=3.7.4,<5; python_version<\"3.9\"'  &&\
+          \  python3 -m pip install --quiet --no-warn-script-location 'grpcio' &&\
+          \ \"$0\" \"$@\"\n"
         - sh
         - -ec
         - 'program_path=$(mktemp -d)
@@ -151,13 +162,15 @@ deploymentSpec:
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
           \ *\n\ndef load_data_from_feast(item_df_output: Output[Dataset], user_df_output:\
-          \ Output[Dataset], interaction_df_output: Output[Dataset]):\n    from feast\
-          \ import FeatureStore\n    from datetime import datetime, timedelta\n  \
-          \  import pandas as pd\n    # TODO make sure the the image have updated\
-          \ feature_store.yaml\n    store = FeatureStore()\n    # load feature services\n\
-          \    item_service = store.get_feature_service(\"item_service\")\n    user_service\
-          \ = store.get_feature_service(\"user_service\")\n    interaction_service\
-          \ = store.get_feature_service(\"interaction_service\")\n\n    num_users\
+          \ Output[Dataset], interaction_df_output: Output[Dataset], neg_interaction_df_output:\
+          \ Output[Dataset]):\n    from feast import FeatureStore\n    from datetime\
+          \ import datetime\n    import pandas as pd\n    import os\n    print('WOWOWWO')\n\
+          \    print(os.listdir('.'))\n    print(os.listdir('feature_repo/'))\n  \
+          \  store = FeatureStore(repo_path=\"feature_repo/\")\n    # load feature\
+          \ services\n    item_service = store.get_feature_service(\"item_service\"\
+          )\n    user_service = store.get_feature_service(\"user_service\")\n    interaction_service\
+          \ = store.get_feature_service(\"interaction_service\")\n    neg_interactions_service\
+          \ = store.get_feature_service('neg_interaction_service')\n\n    num_users\
           \ = 1_000\n    n_items = 5_000\n\n    user_ids = list(range(1, num_users+\
           \ 1))\n    item_ids = list(range(1, n_items+ 1))\n\n    # select which items\
           \ to use for the training\n    item_entity_df = pd.DataFrame.from_dict(\n\
@@ -167,17 +180,21 @@ deploymentSpec:
           \        {\n            'user_id': user_ids,\n            'event_timestamp':\
           \ [datetime(2025, 1, 1)] * len(user_ids) \n        }\n    )\n    # Select\
           \ which item-user interactions to use for the training\n    item_user_interactions_df\
-          \ = pd.read_parquet('./data/interactions_item_user_ids.parquet')\n    item_user_interactions_df['event_timestamp']\
-          \ = datetime(2025, 1, 1)\n\n    # retrive datasets for training\n    item_df\
-          \ = store.get_historical_features(entity_df=item_entity_df, features=item_service).to_df()\n\
-          \    user_df = store.get_historical_features(entity_df=user_entity_df, features=user_service).to_df()\n\
-          \    interaction_df = store.get_historical_features(entity_df=item_user_interactions_df,\
-          \ features=interaction_service).to_df()\n\n    # Pass artifacts\n    item_df.to_parquet(item_df_output.path)\n\
-          \    user_df.to_parquet(user_df_output.path)\n    interaction_df.to_parquet(interaction_df_output.path)\n\
+          \ = pd.read_parquet('./feature_repo/data/interactions_item_user_ids.parquet')\n\
+          \    item_user_neg_interactions_df = pd.read_parquet('./feature_repo/data/neg_interactions_item_user_ids.parquet')\n\
+          \    item_user_interactions_df['event_timestamp'] = datetime(2025, 1, 1)\n\
+          \    item_user_neg_interactions_df['event_timestamp'] = datetime(2025, 1,\
+          \ 1)\n\n    # retrive datasets for training\n    item_df = store.get_historical_features(entity_df=item_entity_df,\
+          \ features=item_service).to_df()\n    user_df = store.get_historical_features(entity_df=user_entity_df,\
+          \ features=user_service).to_df()\n    interaction_df = store.get_historical_features(entity_df=item_user_interactions_df,\
+          \ features=interaction_service).to_df()\n    neg_interaction_df = store.get_historical_features(entity_df=item_user_neg_interactions_df,\
+          \ features=neg_interactions_service).to_df()\n\n    # Pass artifacts\n \
+          \   item_df.to_parquet(item_df_output.path)\n    user_df.to_parquet(user_df_output.path)\n\
+          \    interaction_df.to_parquet(interaction_df_output.path)\n    neg_interaction_df.to_parquet(neg_interaction_df_output.path)\n\
           \n    item_df_output.metadata['format'] = 'parquet'\n    user_df_output.metadata['format']\
           \ = 'parquet'\n    interaction_df_output.metadata['format'] = 'parquet'\n\
-          \n"
-        image: quay.io/ecosystem-appeng/rec-sys-app
+          \    neg_interaction_df_output.metadata['format'] = 'parquet'\n\n"
+        image: quay.io/ecosystem-appeng/rec-sys-app:latest
     exec-train-model:
       container:
         args:
@@ -205,21 +222,21 @@ deploymentSpec:
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
           \ *\n\ndef train_model(item_df_input: Input[Dataset], user_df_input: Input[Dataset],\
-          \ interaction_df_input: Input[Dataset], item_output_model: Output[Model],\
-          \ user_output_model: Output[Model]):\n    from models.two_tower import TwoTowerModel\n\
+          \ interaction_df_input: Input[Dataset], neg_interaction_df_input:Input[Dataset],\
+          \ item_output_model: Output[Model], user_output_model: Output[Model]):\n\
           \    from models.user_tower import UserTower\n    from models.item_tower\
           \ import ItemTower\n    from models.train_two_tower import train_two_tower\n\
           \    import pandas as pd\n    import torch\n    dim = 64\n\n    item_df\
           \ = pd.read_parquet(item_df_input.path)\n    user_df = pd.read_parquet(user_df_input.path)\n\
-          \    interaction_df = pd.read_parquet(interaction_df_input.path)\n\n   \
-          \ item_encoder = ItemTower(dim)\n    user_encoder = UserTower(dim)\n   \
-          \ two_tower_model = TwoTowerModel(item_tower=item_encoder, user_tower=user_encoder)\n\
-          \    train_two_tower(two_tower_model, item_df, user_df, interaction_df)\n\
-          \n    torch.save(item_encoder.state_dict(), item_output_model.path)\n  \
-          \  torch.save(user_encoder.state_dict(), user_output_model.path)\n    item_output_model.metadata['framework']\
+          \    interaction_df = pd.read_parquet(interaction_df_input.path)\n    neg_interaction_df\
+          \ = pd.read_parquet(neg_interaction_df_input.path)\n\n    item_encoder =\
+          \ ItemTower(dim)\n    user_encoder = UserTower(dim)\n    train_two_tower(item_encoder,\
+          \ user_encoder, item_df, user_df, interaction_df, neg_interaction_df)\n\n\
+          \    torch.save(item_encoder.state_dict(), item_output_model.path)\n   \
+          \ torch.save(user_encoder.state_dict(), user_output_model.path)\n    item_output_model.metadata['framework']\
           \ = 'pytorch'\n    user_output_model.metadata['framework'] = 'pytorch'\n\
           \n"
-        image: quay.io/ecosystem-appeng/rec-sys-app
+        image: quay.io/ecosystem-appeng/rec-sys-app:latest
 pipelineInfo:
   name: train-workflow
 root:
@@ -273,6 +290,10 @@ root:
             item_df_input:
               taskOutputArtifact:
                 outputArtifactKey: item_df_output
+                producerTask: load-data-from-feast
+            neg_interaction_df_input:
+              taskOutputArtifact:
+                outputArtifactKey: neg_interaction_df_output
                 producerTask: load-data-from-feast
             user_df_input:
               taskOutputArtifact:
