--- a/train-workflow.yaml
+++ b/train-workflow.yaml
@@ -105,8 +105,13 @@ deploymentSpec:
           \    from models.data_util import data_preproccess\n    from models.user_tower\
           \ import UserTower\n    from models.item_tower import ItemTower\n    import\
           \ pandas as pd\n    import numpy as np\n    from datetime import datetime\n\
-          \    import torch\n    import subprocess\n\n    subprocess.run([\"/bin/bash\"\
-          , \"-c\", \"ls\", \"&&\",\"./entrypoint.sh\"], check=True)\n    with open('feature_repo/feature_store.yaml',\
+          \    import torch\n    import subprocess\n\n    result = subprocess.run(\n\
+          \        [\"/bin/bash\", \"-c\", \"ls && ./entrypoint.sh\"],\n        capture_output=True,\
+          \  # Capture stdout and stderr\n        text=True,           # Return output\
+          \ as strings (not bytes)\n        check=True           # Raise an error\
+          \ if the command fails\n    )\n\n    # Print the stdout\n    print(\"Standard\
+          \ Output:\")\n    print(result.stdout)\n\n    # Print the stderr (if any)\n\
+          \    print(\"Standard Error:\")\n    print(result.stderr)\n    with open('feature_repo/feature_store.yaml',\
           \ 'r') as file:\n        print(file.read())\n\n    store = FeatureStore(repo_path=\"\
           feature_repo/\")\n\n    item_encoder = ItemTower()\n    user_encoder = UserTower()\n\
           \    item_encoder.load_state_dict(torch.load(item_input_model.path))\n \
@@ -168,18 +173,22 @@ deploymentSpec:
           \ Output[Dataset]):\n    from feast import FeatureStore\n    from datetime\
           \ import datetime\n    import pandas as pd\n    import os\n    import psycopg2\n\
           \    from sqlalchemy import create_engine, text\n    import subprocess\n\
-          \n    subprocess.run([\"/bin/bash\", \"-c\", \"ls\", \"&&\",\"./entrypoint.sh\"\
-          ], check=True)\n    with open('feature_repo/feature_store.yaml', 'r') as\
-          \ file:\n        print(file.read())\n    print(f'MyTest: {os.listdir(\"\
-          .\")}')\n    print(f'MyTest2: {os.listdir(\"feature_repo/\")}')\n    print(f'MyTest3:\
-          \ {os.listdir(\"feature_repo/secrets\")}')\n    store = FeatureStore(repo_path=\"\
-          feature_repo/\")\n    # load feature services\n    item_service = store.get_feature_service(\"\
-          item_service\")\n    user_service = store.get_feature_service(\"user_service\"\
-          )\n    interaction_service = store.get_feature_service(\"interaction_service\"\
-          )\n    neg_interactions_service = store.get_feature_service('neg_interaction_service')\n\
-          \n    num_users = 1_000\n    n_items = 5_000\n\n    user_ids = list(range(1,\
-          \ num_users+ 1))\n    item_ids = list(range(1, n_items+ 1))\n\n    # select\
-          \ which items to use for the training\n    item_entity_df = pd.DataFrame.from_dict(\n\
+          \n    result = subprocess.run(\n        [\"/bin/bash\", \"-c\", \"ls &&\
+          \ ./entrypoint.sh\"],\n        capture_output=True,  # Capture stdout and\
+          \ stderr\n        text=True,           # Return output as strings (not bytes)\n\
+          \        check=True           # Raise an error if the command fails\n  \
+          \  )\n\n    # Print the stdout\n    print(\"Standard Output:\")\n    print(result.stdout)\n\
+          \n    # Print the stderr (if any)\n    print(\"Standard Error:\")\n    print(result.stderr)\n\
+          \    print(f'MyTest: {os.listdir(\".\")}')\n    print(f'MyTest2: {os.listdir(\"\
+          feature_repo/\")}')\n    print(f'MyTest3: {os.listdir(\"feature_repo/secrets\"\
+          )}')\n    store = FeatureStore(repo_path=\"feature_repo/\")\n    # load\
+          \ feature services\n    item_service = store.get_feature_service(\"item_service\"\
+          )\n    user_service = store.get_feature_service(\"user_service\")\n    interaction_service\
+          \ = store.get_feature_service(\"interaction_service\")\n    neg_interactions_service\
+          \ = store.get_feature_service('neg_interaction_service')\n\n    num_users\
+          \ = 1_000\n    n_items = 5_000\n\n    user_ids = list(range(1, num_users+\
+          \ 1))\n    item_ids = list(range(1, n_items+ 1))\n\n    # select which items\
+          \ to use for the training\n    item_entity_df = pd.DataFrame.from_dict(\n\
           \        {\n            'item_id': item_ids,\n            'event_timestamp':\
           \ [datetime(2025, 1, 1)] * len(item_ids)\n        }\n    )\n    # select\
           \ which users to use for the training\n    user_entity_df = pd.DataFrame.from_dict(\n\
