--- a/train-workflow.yaml
+++ b/train-workflow.yaml
@@ -33,10 +33,6 @@ components:
           artifactType:
             schemaTitle: system.Dataset
             schemaVersion: 0.0.1
-        neg_interaction_df_output:
-          artifactType:
-            schemaTitle: system.Dataset
-            schemaVersion: 0.0.1
         user_df_output:
           artifactType:
             schemaTitle: system.Dataset
@@ -50,10 +46,6 @@ components:
             schemaTitle: system.Dataset
             schemaVersion: 0.0.1
         item_df_input:
-          artifactType:
-            schemaTitle: system.Dataset
-            schemaVersion: 0.0.1
-        neg_interaction_df_input:
           artifactType:
             schemaTitle: system.Dataset
             schemaVersion: 0.0.1
@@ -102,26 +94,26 @@ deploymentSpec:
           \ *\n\ndef generate_candidates(item_input_model: Input[Model], user_input_model:\
           \ Input[Model], item_df_input: Input[Dataset], user_df_input: Input[Dataset]):\n\
           \    from feast import FeatureStore\n    from feast.data_source import PushMode\n\
-          \    from models.data_util import data_preproccess\n    from models.user_tower\
-          \ import UserTower\n    from models.item_tower import ItemTower\n    import\
-          \ pandas as pd\n    import numpy as np\n    from datetime import datetime\n\
-          \    import torch\n    import subprocess\n\n    result = subprocess.run(\n\
-          \        [\"/bin/bash\", \"-c\", \"./entry_point.sh\", \"&&\", \"ls\"],\n\
-          \        capture_output=True,  # Capture stdout and stderr\n        text=True,\
-          \           # Return output as strings (not bytes)\n        # check=True\
-          \           # Raise an error if the command fails\n    )\n\n    # Print\
-          \ the stdout\n    print(\"Standard Output:\")\n    print(result.stdout)\n\
+          \    from models.data_util import data_preproccess\n    from models.entity_tower.py\
+          \ import EntityTower\n    import pandas as pd\n    import numpy as np\n\
+          \    from datetime import datetime\n    import torch\n    import subprocess\n\
+          \n    result = subprocess.run(\n        [\"/bin/bash\", \"-c\", \"ls &&\
+          \ ./entry_point.sh\"],\n        capture_output=True,  # Capture stdout and\
+          \ stderr\n        text=True,           # Return output as strings (not bytes)\n\
+          \        # check=True           # Raise an error if the command fails\n\
+          \    )\n\n    # Print the stdout\n    print(\"Standard Output:\")\n    print(result.stdout)\n\
           \n    # Print the stderr (if any)\n    print(\"Standard Error:\")\n    print(result.stderr)\n\
           \    with open('feature_repo/feature_store.yaml', 'r') as file:\n      \
           \  print(file.read())\n\n    store = FeatureStore(repo_path=\"feature_repo/\"\
-          )\n\n    item_encoder = ItemTower()\n    user_encoder = UserTower()\n  \
-          \  item_encoder.load_state_dict(torch.load(item_input_model.path))\n   \
-          \ user_encoder.load_state_dict(torch.load(user_input_model.path))\n    item_encoder.eval()\n\
-          \    user_encoder.eval()\n    # load item and user dataframes\n    item_df\
-          \ = pd.read_parquet(item_df_input.path)\n    user_df = pd.read_parquet(user_df_input.path)\n\
-          \n    # Create a new table to be push to the online store\n    item_embed_df\
-          \ = item_df[['item_id']].copy()\n    user_embed_df = user_df[['user_id']].copy()\n\
-          \n    # Encode the items and users\n    item_embed_df['embedding'] = item_encoder(**data_preproccess(item_df)).detach().numpy().tolist()\n\
+          )\n\n    item_encoder = EntityTower()\n    user_encoder = EntityTower()\n\
+          \    item_encoder.load_state_dict(torch.load(item_input_model.path))\n \
+          \   user_encoder.load_state_dict(torch.load(user_input_model.path))\n  \
+          \  item_encoder.eval()\n    user_encoder.eval()\n    # load item and user\
+          \ dataframes\n    item_df = pd.read_parquet(item_df_input.path)\n    user_df\
+          \ = pd.read_parquet(user_df_input.path)\n\n    # Create a new table to be\
+          \ push to the online store\n    item_embed_df = item_df[['item_id']].copy()\n\
+          \    user_embed_df = user_df[['user_id']].copy()\n\n    # Encode the items\
+          \ and users\n    item_embed_df['embedding'] = item_encoder(**data_preproccess(item_df)).detach().numpy().tolist()\n\
           \    user_embed_df['embedding'] = user_encoder(**data_preproccess(user_df)).detach().numpy().tolist()\n\
           \n    # Add the currnet timestamp\n    item_embed_df['event_timestamp']\
           \ = datetime.now()\n    user_embed_df['event_timestamp'] = datetime.now()\n\
@@ -140,6 +132,11 @@ deploymentSpec:
           \    user_items_df['event_timestamp'] = datetime.now()\n    user_items_df['top_k_item_ids']\
           \ = item_recommendation\n\n    store.push('user_items_push_source', user_items_df,\
           \ to=PushMode.ONLINE, allow_registry_cache=False)\n\n"
+        env:
+        - name: FEAST_PROJECT_NAME
+          value: feast_edb_rec_sys
+        - name: FEAST_REGISTRY_URL
+          value: feast-feast-edb-rec-sys-registry.rec-sys.svc.cluster.local
         image: quay.io/ecosystem-appeng/rec-sys-app:0.0.24
     exec-load-data-from-feast:
       container:
@@ -169,57 +166,57 @@ deploymentSpec:
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
           \ *\n\ndef load_data_from_feast(item_df_output: Output[Dataset], user_df_output:\
-          \ Output[Dataset], interaction_df_output: Output[Dataset], neg_interaction_df_output:\
-          \ Output[Dataset]):\n    from feast import FeatureStore\n    from datetime\
-          \ import datetime\n    import pandas as pd\n    import os\n    import psycopg2\n\
-          \    from sqlalchemy import create_engine, text\n    import subprocess\n\
-          \n    result = subprocess.run(\n        [\"/bin/bash\", \"-c\", \"./entry_point.sh\"\
-          , \"&&\", \"ls\"],\n        capture_output=True,  # Capture stdout and stderr\n\
-          \        text=True,           # Return output as strings (not bytes)\n \
-          \   )\n\n    # Print the stdout\n    print(\"Standard Output:\")\n    print(result.stdout)\n\
-          \n    # Print the stderr (if any)\n    print(\"Standard Error:\")\n    print(result.stderr)\n\
+          \ Output[Dataset], interaction_df_output: Output[Dataset]):\n    from feast\
+          \ import FeatureStore\n    from datetime import datetime\n    import pandas\
+          \ as pd\n    import os\n    import psycopg2\n    from sqlalchemy import\
+          \ create_engine, text\n    import subprocess\n\n    result = subprocess.run(\n\
+          \        [\"/bin/bash\", \"-c\", \"ls && ./entry_point.sh\"],\n        capture_output=True,\
+          \  # Capture stdout and stderr\n        text=True,           # Return output\
+          \ as strings (not bytes)\n    )\n\n    # Print the stdout\n    print(\"\
+          Standard Output:\")\n    print(result.stdout)\n\n    # Print the stderr\
+          \ (if any)\n    print(\"Standard Error:\")\n    print(result.stderr)\n\n\
           \    with open('feature_repo/feature_store.yaml', 'r') as file:\n      \
           \  print(file.read())\n    store = FeatureStore(repo_path=\"feature_repo/\"\
           )\n    store.refresh_registry()\n    # load feature services\n    item_service\
           \ = store.get_feature_service(\"item_service\")\n    user_service = store.get_feature_service(\"\
           user_service\")\n    interaction_service = store.get_feature_service(\"\
-          interaction_service\")\n    neg_interactions_service = store.get_feature_service('neg_interaction_service')\n\
-          \n    num_users = 1_000\n    n_items = 5_000\n\n    user_ids = list(range(1,\
-          \ num_users+ 1))\n    item_ids = list(range(1, n_items+ 1))\n\n    # select\
-          \ which items to use for the training\n    item_entity_df = pd.DataFrame.from_dict(\n\
-          \        {\n            'item_id': item_ids,\n            'event_timestamp':\
-          \ [datetime(2025, 1, 1)] * len(item_ids)\n        }\n    )\n    # select\
-          \ which users to use for the training\n    user_entity_df = pd.DataFrame.from_dict(\n\
-          \        {\n            'user_id': user_ids,\n            'event_timestamp':\
-          \ [datetime(2025, 1, 1)] * len(user_ids)\n        }\n    )\n    # Select\
-          \ which item-user interactions to use for the training\n    item_user_interactions_df\
-          \ = pd.read_parquet('./feature_repo/data/interactions_item_user_ids.parquet')\n\
-          \    item_user_neg_interactions_df = pd.read_parquet('./feature_repo/data/neg_interactions_item_user_ids.parquet')\n\
+          interaction_service\")\n\n    num_users = 1_000\n    n_items = 5_000\n\n\
+          \    user_ids = list(range(1, num_users+ 1))\n    item_ids = list(range(1,\
+          \ n_items+ 1))\n\n    # select which items to use for the training\n   \
+          \ item_entity_df = pd.DataFrame.from_dict(\n        {\n            'item_id':\
+          \ item_ids,\n            'event_timestamp': [datetime(2025, 1, 1)] * len(item_ids)\n\
+          \        }\n    )\n    # select which users to use for the training\n  \
+          \  user_entity_df = pd.DataFrame.from_dict(\n        {\n            'user_id':\
+          \ user_ids,\n            'event_timestamp': [datetime(2025, 1, 1)] * len(user_ids)\n\
+          \        }\n    )\n    # Select which item-user interactions to use for\
+          \ the training\n    item_user_interactions_df = pd.read_parquet('./feature_repo/data/interactions_item_user_ids.parquet')\n\
           \    item_user_interactions_df['event_timestamp'] = datetime(2025, 1, 1)\n\
-          \    item_user_neg_interactions_df['event_timestamp'] = datetime(2025, 1,\
-          \ 1)\n\n    # retrive datasets for training\n    item_df = store.get_historical_features(entity_df=item_entity_df,\
+          \n    # retrive datasets for training\n    item_df = store.get_historical_features(entity_df=item_entity_df,\
           \ features=item_service).to_df()\n    user_df = store.get_historical_features(entity_df=user_entity_df,\
           \ features=user_service).to_df()\n    interaction_df = store.get_historical_features(entity_df=item_user_interactions_df,\
-          \ features=interaction_service).to_df()\n    neg_interaction_df = store.get_historical_features(entity_df=item_user_neg_interactions_df,\
-          \ features=neg_interactions_service).to_df()\n\n    uri = os.getenv('uri',\
-          \ None)\n    engine = create_engine(uri)\n\n    def table_exists(engine,\
-          \ table_name):\n        query = text(\"SELECT COUNT(*) FROM information_schema.tables\
-          \ WHERE table_name = :table_name\")\n        with engine.connect() as connection:\n\
+          \ features=interaction_service).to_df()\n\n    uri = os.getenv('uri', None)\n\
+          \    engine = create_engine(uri)\n\n    def table_exists(engine, table_name):\n\
+          \        query = text(\"SELECT COUNT(*) FROM information_schema.tables WHERE\
+          \ table_name = :table_name\")\n        with engine.connect() as connection:\n\
           \            result = connection.execute(query, {\"table_name\": table_name}).scalar()\n\
-          \            return result > 0\n\n    if table_exists(engine, 'stream_interaction_negetive'):\n\
-          \        query_negative = 'SELECT * FROM stream_interaction_negetive'\n\
-          \        stream_negetive_inter_df = pd.read_sql(query_negative, engine).rename(columns={'timestamp':'event_timestamp'})\n\
-          \n        neg_interaction_df = pd.concat([neg_interaction_df, stream_negetive_inter_df],\
-          \ axis=0)\n\n    if table_exists(engine, 'stream_interaction_positive'):\n\
-          \        query_positive = 'SELECT * FROM stream_interaction_positive'\n\
-          \        stream_positive_inter_df = pd.read_sql(query_positive, engine).rename(columns={'timestamp':'event_timestamp'})\n\
+          \            return result > 0\n\n    if table_exists(engine, 'new_users'):\n\
+          \        query_new_users = 'SELECT * FROM new_users'\n        stream_users_df\
+          \ = pd.read_sql(query_new_users, engine).rename(columns={'timestamp':'signup_date'})\n\
+          \n        user_df = pd.concat([user_df, stream_users_df], axis=0)\n\n  \
+          \  if table_exists(engine, 'stream_interaction'):\n        query_positive\
+          \ = 'SELECT * FROM stream_interaction'\n        stream_positive_inter_df\
+          \ = pd.read_sql(query_positive, engine).rename(columns={'timestamp':'event_timestamp'})\n\
           \n        interaction_df = pd.concat([interaction_df, stream_positive_inter_df],\
           \ axis=0)\n\n    # Pass artifacts\n    item_df.to_parquet(item_df_output.path)\n\
           \    user_df.to_parquet(user_df_output.path)\n    interaction_df.to_parquet(interaction_df_output.path)\n\
-          \    neg_interaction_df.to_parquet(neg_interaction_df_output.path)\n\n \
-          \   item_df_output.metadata['format'] = 'parquet'\n    user_df_output.metadata['format']\
+          \n    item_df_output.metadata['format'] = 'parquet'\n    user_df_output.metadata['format']\
           \ = 'parquet'\n    interaction_df_output.metadata['format'] = 'parquet'\n\
-          \    neg_interaction_df_output.metadata['format'] = 'parquet'\n\n"
+          \n"
+        env:
+        - name: FEAST_PROJECT_NAME
+          value: feast_edb_rec_sys
+        - name: FEAST_REGISTRY_URL
+          value: feast-feast-edb-rec-sys-registry.rec-sys.svc.cluster.local
         image: quay.io/ecosystem-appeng/rec-sys-app:0.0.24
     exec-train-model:
       container:
@@ -248,20 +245,16 @@ deploymentSpec:
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
           \ *\n\ndef train_model(item_df_input: Input[Dataset], user_df_input: Input[Dataset],\
-          \ interaction_df_input: Input[Dataset], neg_interaction_df_input:Input[Dataset],\
-          \ item_output_model: Output[Model], user_output_model: Output[Model]):\n\
-          \    from models.user_tower import UserTower\n    from models.item_tower\
-          \ import ItemTower\n    from models.train_two_tower import train_two_tower\n\
-          \    import pandas as pd\n    import torch\n    dim = 64\n\n    item_df\
-          \ = pd.read_parquet(item_df_input.path)\n    user_df = pd.read_parquet(user_df_input.path)\n\
-          \    interaction_df = pd.read_parquet(interaction_df_input.path)\n    neg_interaction_df\
-          \ = pd.read_parquet(neg_interaction_df_input.path)\n\n    item_encoder =\
-          \ ItemTower(dim)\n    user_encoder = UserTower(dim)\n    train_two_tower(item_encoder,\
-          \ user_encoder, item_df, user_df, interaction_df, neg_interaction_df)\n\n\
-          \    torch.save(item_encoder.state_dict(), item_output_model.path)\n   \
-          \ torch.save(user_encoder.state_dict(), user_output_model.path)\n    item_output_model.metadata['framework']\
-          \ = 'pytorch'\n    user_output_model.metadata['framework'] = 'pytorch'\n\
-          \n"
+          \ interaction_df_input: Input[Dataset], item_output_model: Output[Model],\
+          \ user_output_model: Output[Model]):\n    from models.train_two_tower import\
+          \ create_and_train_two_tower\n    import pandas as pd\n    import torch\n\
+          \n    item_df = pd.read_parquet(item_df_input.path)\n    user_df = pd.read_parquet(user_df_input.path)\n\
+          \    interaction_df = pd.read_parquet(interaction_df_input.path)\n\n   \
+          \ item_encoder, user_encoder = create_and_train_two_tower(item_df, user_df,\
+          \ interaction_df)\n\n    torch.save(item_encoder.state_dict(), item_output_model.path)\n\
+          \    torch.save(user_encoder.state_dict(), user_output_model.path)\n   \
+          \ item_output_model.metadata['framework'] = 'pytorch'\n    user_output_model.metadata['framework']\
+          \ = 'pytorch'\n\n"
         image: quay.io/ecosystem-appeng/rec-sys-app:0.0.24
 pipelineInfo:
   name: train-workflow
@@ -317,10 +310,6 @@ root:
               taskOutputArtifact:
                 outputArtifactKey: item_df_output
                 producerTask: load-data-from-feast
-            neg_interaction_df_input:
-              taskOutputArtifact:
-                outputArtifactKey: neg_interaction_df_output
-                producerTask: load-data-from-feast
             user_df_input:
               taskOutputArtifact:
                 outputArtifactKey: user_df_output
@@ -341,6 +330,14 @@ platforms:
               secretKey: uri
             - envVar: DB_PASSWORD
               secretKey: password
+            - envVar: DB_HOST
+              secretKey: host
+            - envVar: DB_NAME
+              secretKey: dbname
+            - envVar: DB_USER
+              secretKey: user
+            - envVar: DB_PORT
+              secretKey: port
             secretName: cluster-sample-app
           secretAsVolume:
           - mountPath: /app/feature_repo/secrets
@@ -353,6 +350,14 @@ platforms:
               secretKey: uri
             - envVar: DB_PASSWORD
               secretKey: password
+            - envVar: DB_HOST
+              secretKey: host
+            - envVar: DB_NAME
+              secretKey: dbname
+            - envVar: DB_USER
+              secretKey: user
+            - envVar: DB_PORT
+              secretKey: port
             secretName: cluster-sample-app
           secretAsVolume:
           - mountPath: /app/feature_repo/secrets
